--- a/public/home.html
+++ b/public/home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Home</title>
-</head>
-<body>
-  <h1>Access Token: <span id="accessToken"></span></h1>
-  <button id="getTokenBtn">Get Access Token</button>
-  <input type="text" id="usernameInput" placeholder="Enter username">
-  <h1>Cust Id: <span id="customerID"></span></h1>
-  <button id="getCustBtn">Get CustID</button>
-  <script src="home.js"></script>
-</body>
+  <head>
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Access Token: <span id="accessToken"></span></h1>
+    <button id="getTokenBtn">Get Access Token</button>
+    <input type="text" id="usernameInput" placeholder="Enter username" />
+    <h1>Cust Id: <span id="customerID"></span></h1>
+    <button id="getCustBtn">Get CustID</button>
+    <button id="getLinkBtn">Get Connect Link</button>
+    <h1>Link: <span id="openLink"></span></h1>
+    <button id="openConnectLink">Open Connect Link</button>
+    <script src="home.js"></script>
+  </body>
 </html>
